k8s/namespace.yaml
# @author Alejandro Galue <agalue@opennms.com>

---
apiVersion: v1
kind: Namespace
metadata:
  name: opennms
