k8s/grafana.deployment.yaml
# @author Alejandro Galue <agalue@opennms.com>

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: opennms
  labels:
    app: grafana
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana-helm
        image: opennms/helm:7.1.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: config
          mountPath: /etc/grafana/provisioning/plugins/helm.yaml
          subPath: plugins.helm.yaml
        - name: config
          mountPath: /etc/grafana/provisioning/datasources/helm.yaml
          subPath: datasources.helm.yaml
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 60
      volumes:
      - name: scripts
        configMap:
          name: app-scripts
      - name: config
        configMap:
          name: helm-config
