k8s/opennms-core.statefulset.yaml
# @author Alejandro Galue <agalue@opennms.com>

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: onms-core
  namespace: opennms
  labels:
    app: onms-core
spec:
  serviceName: onms-core
  replicas: 1 # DO NOT CHANGE. The solution only allows 1 instance
  selector:
    matchLabels:
      app: onms-core
  template:
    metadata:
      labels:
        app: onms-core
    spec:
      terminationGracePeriodSeconds: 120
      containers:
      - name: onms
        image: opennms/horizon:29.0.1
        imagePullPolicy: IfNotPresent
        args:
        - -s
        ports:
        - containerPort: 8101
          name: karaf
        - containerPort: 8980
          name: http
        volumeMounts:
        - name: etc
          mountPath: /opt/opennms/etc
        - name: deploy
          mountPath: /opt/opennms/deploy
        - name: rrd
          mountPath: /opennms-data/rrd
        - name: jks
          mountPath: /opt/opennms-overlay/etc/kafka-truststore.jks
          subPath: kafka-truststore.jks
        resources:
          limits:
            cpu: '2'
            memory: 8Gi
          requests:
            cpu: '2'
            memory: 4Gi
        readinessProbe:
          httpGet:
            path: /opennms/login.jsp
            port: http
          initialDelaySeconds: 60
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: /opennms/login.jsp
            port: http
          initialDelaySeconds: 60
          periodSeconds: 60
      volumes:
      - name: deploy
        emptyDir: {}
      - name: scripts
        configMap:
          name: app-scripts
      - name: jks
        configMap:
          name: kafka-certs
      - name: etc
        persistentVolumeClaim:
          claimName: onms-etc-pvc
          readOnly: false
      - name: rrd
        persistentVolumeClaim:
          claimName: onms-rrd-pvc
          readOnly: false
