k8s/opennms-sentinel.statefulset.yaml
# @author Alejandro Galue <agalue@opennms.com>
#
# Sentinel is required only for Processing Flows and Telemetry Data.
# Using StatefulSets for Sentinels only to have a unique and immutable SENTINEL_ID.
# SENTINEL_ID and SENTINEL_LOCATION are required for tracing.

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: onms-sentinel
  namespace: opennms
  labels:
    app: onms-sentinel
spec:
  serviceName: sentinel
  replicas: 2
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: onms-sentinel
  template:
    metadata:
      labels:
        app: onms-sentinel
    spec:
      terminationGracePeriodSeconds: 60
      affinity: # Avoid scheduling the pod in the same host as the Core OpenNMS when possible
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onms-core
      containers:
      - name: sentinel
        image: opennms/sentinel:29.0.1
        imagePullPolicy: IfNotPresent
        args:
        - -c
        ports:
        - containerPort: 8181
          name: http
        - containerPort: 8301
          name: karaf
        volumeMounts:
        - name: etc-overlay
          mountPath: /opt/sentinel-etc-overlay
        - name: jks
          mountPath: /opt/sentinel/etc/kafka-truststore.jks
          subPath: kafka-truststore.jks
        resources:
          limits:
            cpu: '2'
            memory: 4Gi
          requests:
            cpu: '1'
            memory: 2Gi
        readinessProbe:
          exec:
            command:
            - /health.sh
          initialDelaySeconds: 60
          periodSeconds: 60
        livenessProbe: # WARNING: The health-check checks dependencies, which is not suitable for liveness probes
          exec:
            command:
            - /health.sh
          initialDelaySeconds: 60
          periodSeconds: 60
      volumes:
      - name: etc-overlay
        emptyDir: {}
      - name: scripts
        configMap:
          name: app-scripts
      - name: jks
        configMap:
          name: kafka-certs
