k8s/external.elasticsearch.service.yaml
# @author Alejandro Galue <agalue@opennms.com>
#
# Ensure to adjust the FQDN for the externalName accordingly.

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: opennms
spec:
  type: ExternalName
  externalName: elasticsearch.shared.svc.cluster.local
  ports:
  - port: 9200
