k8s/grafana-renderer.service.yaml
# @author Alejandro Galue <agalue@opennms.com>

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-renderer
  namespace: opennms
  labels:
    app: grafana-renderer
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: grafana-renderer
