k8s/grafana.service.yaml
# @author Alejandro Galue <agalue@opennms.com>

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: opennms
  labels:
    app: grafana
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: grafana
