k8s/kafka.service.yaml
# @author Alejandro Galue <agalue@opennms.com>
#
# Ensure to adjust the FQDN for the externalName accordingly.

---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: opennms
spec:
  type: ExternalName
  externalName: kafka.shared.svc.cluster.local
  ports:
  - port: 9092
