k8s/opennms-core.service.yaml
# @author Alejandro Galue <agalue@opennms.com>

---
apiVersion: v1
kind: Service
metadata:
  name: onms-core
  namespace: opennms
  labels:
    app: onms-core
spec:
  clusterIP: None
  ports:
  - port: 8980
    name: http
  - port: 8101
    name: karaf
  selector:
    app: onms-core
