k8s/opennms-sentinel.service.yaml
# @author Alejandro Galue <agalue@opennms.com>
#
# Sentinel is required only for Processing Flows and Telemetry Data.
# Using StatefulSets for Sentinels only to have a unique and immutable SENTINEL_ID.
# SENTINEL_ID and SENTINEL_LOCATION are required for tracing.

---
apiVersion: v1
kind: Service
metadata:
  name: sentinel
  namespace: opennms
  labels:
    app: onms-sentinel
spec:
  clusterIP: None
  ports:
  - name: karaf
    protocol: TCP
    port: 8301
    targetPort: karaf
  - name: http
    protocol: TCP
    port: 8181
    targetPort: http
  selector:
    app: onms-sentinel
