k8s/ingress.yaml
# @author Alejandro Galue <agalue@opennms.com>
#
# WARNING: Ensure the usage of correct host domains and cert-manager issuer.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onms-ingress
  namespace: opennms
  annotations:
    ingress.kubernetes.io/affinity: cookie
    ingress.kubernetes.io/session-cookie-name: route
    ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: opennms-issuer
spec:
  ingressClassName: nginx
  tls:
    - secretName: onms-ingress-cert
      hosts:
        - onms.k8s.agalue.net
        - onms-core.k8s.agalue.net
        - grafana.k8s.agalue.net
  rules:
    - host: onms.k8s.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onms-ui
                port:
                  number: 8980
          - path: /opennms/nrt
            pathType: Prefix
            backend:
              service:
                name: onms-core
                port:
                  number: 8980
    - host: onms-core.k8s.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onms-core
                port:
                  number: 8980
    - host: grafana.k8s.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
